# Strong531

./: README.md  Strong531.sln  pyproject.toml  strong531.py
Strong531/: ObjectModel.cs  PlanMaker.cs
Strong531ConsoleApp/: Configuration.cs  Program.cs  Strong531ConsoleApp.csproj  config.yaml
Strong531Test/: PlanMakerTests.cs  Strong531Test.csproj
